--- a/Q_Determinant/MainWindow.xaml
+++ b/Q_Determinant/MainWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+    <Grid x:Name="Griddi">
+        <Button Content="Button" HorizontalAlignment="Left" Margin="143,129,0,0" VerticalAlignment="Top" Width="75" Click="ClickBt"/>
+
     </Grid>
 </Window>
