--- a/Q_Determinant/MainWindow.xaml
+++ b/Q_Determinant/MainWindow.xaml
@@ -1,9 +1,16 @@
 ﻿<Window x:Class="Q_Determinant.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        WindowStartupLocation="CenterScreen" Title="Q-детерминант" Style="{DynamicResource FlatWindowStyle}">
     <Grid x:Name="Griddi">
         <Button Content="Button" HorizontalAlignment="Left" Margin="143,129,0,0" VerticalAlignment="Top" Width="75" Click="ClickBt"/>
-
+        <StatusBar
+            VerticalAlignment="Bottom"
+            Height="24">
+            <TextBlock Margin="3,0,0,0">Ready</TextBlock>
+            <StatusBarItem HorizontalAlignment="Right">
+                <ResizeGrip Opacity="0.75" />
+            </StatusBarItem>
+        </StatusBar>
     </Grid>
 </Window>
