--- a/ModernControls/Themes/Generic.xaml
+++ b/ModernControls/Themes/Generic.xaml
@@ -1,8 +1,13 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:ModernControls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ModernControls;component/Themes/MWindowStyle.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/ASideStyle.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/MTabControlStyle.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/MScrollBarStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
+    
 </ResourceDictionary>
