--- a/Q_Determinant/MainWindow.xaml
+++ b/Q_Determinant/MainWindow.xaml
@@ -2,10 +2,10 @@
         xmlns:ModernControls="clr-namespace:ModernControls;assembly=ModernControls"                        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStartupLocation="CenterScreen" Title="Q-детерминант">       
-        <Menu Background="{DynamicResource BackgroundColorBrush}" 
-              Height="20" Foreground="{DynamicResource BasicFontColorBrush}">
-            <MenuItem Header="FILE" Background="{DynamicResource BackgroundColorBrush}">
+        WindowStartupLocation="CenterScreen" Title="Q-детерминант" WithASide="Collapsed" StatusContent="Reeeeeady" MinHeight="768" MinWidth="1024">
+    <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+    <Menu Height="20" VerticalAlignment="Top" DockPanel.Dock="Top">
+        <MenuItem Header="FILE">
                 <MenuItem Header="New">
                     <MenuItem Header="Solution"/>
                     <MenuItem Header="Project"/>
@@ -15,21 +15,9 @@
                 </MenuItem>
                 <MenuItem Header="Save"/>
                 <MenuItem Header="Save All"/>
-
-                <MenuItem Header="Import In New Project">
-                    <MenuItem Header="Flowchart..."/>
-                    <MenuItem Header="Implementation Plan..."/>
-                    <MenuItem Header="Q-Determinant..."/>
-                </MenuItem>
-                <MenuItem Header="Export In File">
-                    <MenuItem Header="Flowchart..."/>
-                    <MenuItem Header="Implementation Plan..."/>
-                    <MenuItem Header="Q-Determinant..."/>
-                </MenuItem>
-
                 <MenuItem Header="Close"/>
             </MenuItem>
-            <MenuItem Header="PROJECT" Background="{DynamicResource BackgroundColorBrush}">
+            <MenuItem Header="PROJECT">
                 <MenuItem Header="Add Flowchart"/>
                 <MenuItem Header="Add Q-Determinant"/>
 
@@ -46,10 +34,77 @@
 
                 <MenuItem Header="Properties"/>
             </MenuItem>
-            <MenuItem Header="HELP" Background="{DynamicResource BackgroundColorBrush}">
+            <MenuItem Header="HELP">
                 <MenuItem Header="View Help"/>
                 <MenuItem Header="About Q-Determinant"/>
                 <MenuItem Header="Check Updates"/>
             </MenuItem>
         </Menu>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" MaxWidth="200"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="3*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="1*" MaxWidth="200"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <GridSplitter Grid.Column="1" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5"/>
+            <GridSplitter Grid.Column="3" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5"/>
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="3*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="1*" MaxHeight="150"></RowDefinition>
+                </Grid.RowDefinitions>
+                <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <TabItem Header="Q1.FlowChart">
+                        <ScrollViewer CanContentScroll="False" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                            <StackPanel Background="Turquoise" Width="1680" Height="1050"></StackPanel>
+                        </ScrollViewer>
+                    </TabItem>
+                    <TabItem Header="Q1.ImplementationPlan">
+                        <Grid Background="{StaticResource SuccesFontColorBrush}"/>
+                    </TabItem>
+                </TabControl>
+                <GridSplitter Grid.Row="1" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="5"/>
+            </Grid>
+            <Grid Grid.Column="4">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="1*" MaxHeight="300"></RowDefinition>
+                </Grid.RowDefinitions>
+                <ScrollViewer CanContentScroll="False" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                    <TreeView HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <TreeViewItem Header="Solution 'Test'" IsExpanded="True">
+                            <TreeViewItem Header="Algorithm_1" IsExpanded="True">
+                                <TreeViewItem Header="FlowChart.fc" HorizontalAlignment="Left" Width="125" IsExpanded="True">
+                                    <TreeViewItem Header="Block(0)"/>
+                                    <TreeViewItem Header="Block(1)"/>
+                                </TreeViewItem>
+                                <TreeViewItem Header="Q-Determinant.qd" HorizontalAlignment="Left" Width="125" IsExpanded="True"/>
+                                <TreeViewItem Header="ImplementationPlan.ip" HorizontalAlignment="Left" Width="125" IsExpanded="True">
+                                    <TreeViewItem Header="Element(0)"/>
+                                    <TreeViewItem Header="Element(1)"/>
+                                </TreeViewItem>
+                            </TreeViewItem>
+                            <TreeViewItem Header="Algorithm_2" IsExpanded="True">
+                                <TreeViewItem Header="FlowChart.fc" HorizontalAlignment="Left" Width="125" IsExpanded="True">
+                                    <TreeViewItem Header="Block(0)"/>
+                                    <TreeViewItem Header="Block(1)"/>
+                                </TreeViewItem>
+                                <TreeViewItem Header="Q-Determinant.qd" HorizontalAlignment="Left" Width="125" IsExpanded="True"/>
+                                <TreeViewItem Header="ImplementationPlan.ip" HorizontalAlignment="Left" Width="125" IsExpanded="True">
+                                    <TreeViewItem Header="Element(0)"/>
+                                    <TreeViewItem Header="Element(1)"/>
+                                </TreeViewItem>
+                            </TreeViewItem>
+                        </TreeViewItem>
+                    </TreeView>
+                </ScrollViewer>
+                <GridSplitter Grid.Row="1" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="5"/>
+                
+            </Grid>
+        </Grid>
+    </DockPanel>
 </ModernControls:MWindow>
