Styling for controls begin!

--- a/ModernControls/Themes/Generic.xaml
+++ b/ModernControls/Themes/Generic.xaml
@@ -8,6 +8,8 @@
         <ResourceDictionary Source="/ModernControls;component/Themes/ASideStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/MTabControlStyle.xaml" />
         <ResourceDictionary Source="/ModernControls;component/Themes/MScrollBarStyle.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/MTreeViewStyle.xaml" />
+        <ResourceDictionary Source="/ModernControls;component/Themes/MMenuStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
