--- a/Q_Determinant/MainWindow.xaml
+++ b/Q_Determinant/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<ModernControls:MWindow x:Class="Q_Determinant.MWindow"
-        xmlns:ModernControls="clr-namespace:ModernControls;assembly=ModernControls"                        
+﻿<modernControls:MWindow x:Class="Q_Determinant.MWindow"
+        xmlns:modernControls="clr-namespace:ModernControls;assembly=ModernControls"                        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStartupLocation="CenterScreen" Title="Q-детерминант" WithASide="Collapsed" StatusContent="Reeeeeady" MinHeight="768" MinWidth="1024">
     <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-    <Menu Height="20" VerticalAlignment="Top" DockPanel.Dock="Top">
+    <Menu DockPanel.Dock="Top">
         <MenuItem Header="FILE">
                 <MenuItem Header="New">
                     <MenuItem Header="Solution"/>
@@ -58,7 +58,7 @@
                 </Grid.RowDefinitions>
                 <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <TabItem Header="Q1.FlowChart">
-                        <ScrollViewer CanContentScroll="False" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                        <ScrollViewer CanContentScroll="False">
                             <StackPanel Background="Turquoise" Width="1680" Height="1050"></StackPanel>
                         </ScrollViewer>
                     </TabItem>
@@ -74,12 +74,14 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="1*" MaxHeight="300"></RowDefinition>
                 </Grid.RowDefinitions>
-                <ScrollViewer CanContentScroll="False" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <TreeView HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                        <TreeViewItem Header="Solution 'Test'" IsExpanded="True">
+                <DockPanel VerticalAlignment="Stretch">
+                <TextBlock Text="Solution Explorer" FontSize="14" Height="18" Margin="5" VerticalAlignment="Center" DockPanel.Dock="Top"/>
+                <ScrollViewer CanContentScroll="False" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" DockPanel.Dock="Bottom">
+                    <TreeView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+                        <TreeViewItem Header="Solution 'Test'" IsExpanded="True" >
                             <TreeViewItem Header="Algorithm_1" IsExpanded="True">
                                 <TreeViewItem Header="FlowChart.fc" HorizontalAlignment="Left" Width="125" IsExpanded="True">
-                                    <TreeViewItem Header="Block(0)"/>
+                                        <TreeViewItem Header="Block(0)"/>
                                     <TreeViewItem Header="Block(1)"/>
                                 </TreeViewItem>
                                 <TreeViewItem Header="Q-Determinant.qd" HorizontalAlignment="Left" Width="125" IsExpanded="True"/>
@@ -102,9 +104,10 @@
                         </TreeViewItem>
                     </TreeView>
                 </ScrollViewer>
+                </DockPanel>
                 <GridSplitter Grid.Row="1" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="5"/>
                 
             </Grid>
         </Grid>
     </DockPanel>
-</ModernControls:MWindow>
+</modernControls:MWindow>
