--- a/Q_Determinant/MainWindow.xaml
+++ b/Q_Determinant/MainWindow.xaml
@@ -1,10 +1,11 @@
-﻿<modernControls:MWindow x:Class="Q_Determinant.MWindow"
+﻿<modernControls:MWindow x:Class="Q_Determinant.MainWindow"
         xmlns:modernControls="clr-namespace:ModernControls;assembly=ModernControls"                        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        WindowStartupLocation="CenterScreen" Title="Q-детерминант" WithASide="Collapsed" StatusContent="Reeeeeady" MinHeight="768" MinWidth="1024">
+        xmlns:local="clr-namespace:Q_Determinant"
+        WindowStartupLocation="CenterScreen" Title="Q-детерминант" WithASide="Collapsed" StatusContent="Reeeeeady" MinHeight="768" MinWidth="1024" Loaded="OnLoad" >
     <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-    <Menu DockPanel.Dock="Top">
+    <Menu DockPanel.Dock="Top" IsMainMenu="True">
         <MenuItem Header="FILE">
                 <MenuItem Header="New">
                     <MenuItem Header="Solution"/>
@@ -48,6 +49,16 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="1*" MaxWidth="200"></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            <ListBox x:Name="FlowChartElements" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{StaticResource BackgroundColorBrush}" ItemsSource="{Binding}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{Binding ImageSrc}" Width="30" Height="30" VerticalAlignment="Center"/>
+                            <TextBlock Text="{Binding Name}" Foreground="{StaticResource BasicFontColorBrush}" TextOptions.TextFormattingMode="Display" VerticalAlignment="Center" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
             <GridSplitter Grid.Column="1" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5"/>
             <GridSplitter Grid.Column="3" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5"/>
             <Grid Grid.Column="2">
@@ -58,12 +69,10 @@
                 </Grid.RowDefinitions>
                 <TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <TabItem Header="Q1.FlowChart">
-                        <ScrollViewer CanContentScroll="False">
-                            <StackPanel Background="Turquoise" Width="1680" Height="1050"></StackPanel>
-                        </ScrollViewer>
+                        <StackPanel Background="Turquoise" Width="50000" Height="100000"/>
                     </TabItem>
                     <TabItem Header="Q1.ImplementationPlan">
-                        <Grid Background="{StaticResource SuccesFontColorBrush}"/>
+                        <StackPanel Background="Bisque" Width="50" Height="50"/>
                     </TabItem>
                 </TabControl>
                 <GridSplitter Grid.Row="1" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="5"/>
@@ -77,32 +86,19 @@
                 <DockPanel VerticalAlignment="Stretch">
                 <TextBlock Text="Solution Explorer" FontSize="14" Height="18" Margin="5" VerticalAlignment="Center" DockPanel.Dock="Top"/>
                 <ScrollViewer CanContentScroll="False" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" DockPanel.Dock="Bottom">
-                    <TreeView HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-                        <TreeViewItem Header="Solution 'Test'" IsExpanded="True" >
-                            <TreeViewItem Header="Algorithm_1" IsExpanded="True">
-                                <TreeViewItem Header="FlowChart.fc" HorizontalAlignment="Left" Width="125" IsExpanded="True">
-                                        <TreeViewItem Header="Block(0)"/>
-                                    <TreeViewItem Header="Block(1)"/>
-                                </TreeViewItem>
-                                <TreeViewItem Header="Q-Determinant.qd" HorizontalAlignment="Left" Width="125" IsExpanded="True"/>
-                                <TreeViewItem Header="ImplementationPlan.ip" HorizontalAlignment="Left" Width="125" IsExpanded="True">
-                                    <TreeViewItem Header="Element(0)"/>
-                                    <TreeViewItem Header="Element(1)"/>
-                                </TreeViewItem>
-                            </TreeViewItem>
-                            <TreeViewItem Header="Algorithm_2" IsExpanded="True">
-                                <TreeViewItem Header="FlowChart.fc" HorizontalAlignment="Left" Width="125" IsExpanded="True">
-                                    <TreeViewItem Header="Block(0)"/>
-                                    <TreeViewItem Header="Block(1)"/>
-                                </TreeViewItem>
-                                <TreeViewItem Header="Q-Determinant.qd" HorizontalAlignment="Left" Width="125" IsExpanded="True"/>
-                                <TreeViewItem Header="ImplementationPlan.ip" HorizontalAlignment="Left" Width="125" IsExpanded="True">
-                                    <TreeViewItem Header="Element(0)"/>
-                                    <TreeViewItem Header="Element(1)"/>
-                                </TreeViewItem>
-                            </TreeViewItem>
-                        </TreeViewItem>
-                    </TreeView>
+                        <TreeView  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+                            <TreeViewItem x:Name="SolutionExplorer" Header="Solution 'test'"  ItemsSource="{Binding}"/>
+                            <TreeView.Resources>
+                                <HierarchicalDataTemplate DataType="{x:Type local:AlgorithmFolder}"
+                                ItemsSource = "{Binding Path=Files}">
+                                    <TextBlock Text="{Binding Path=Name}"/>
+                                </HierarchicalDataTemplate>
+
+                                <DataTemplate DataType="{x:Type local:AlgorithmFile}">
+                                    <TextBlock Text="{Binding Path=Name}" MouseLeftButtonDown="ChooseAlgorithmFile" />
+                                </DataTemplate>
+                            </TreeView.Resources>
+                        </TreeView>
                 </ScrollViewer>
                 </DockPanel>
                 <GridSplitter Grid.Row="1" Background="{StaticResource BorderColorBrush}" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="5"/>
